--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  display: grid;
+  place-items: center;
   min-height: 100vh;
+}
+main {
+  text-align: center;
+  display: grid;
+  place-items: center;
+}
+
+.form-card {
+  color: rgb(168, 168, 168) !important;
+  margin: auto;
+  border: 1px solid rgb(26, 26, 26);
+  height: fit-content;
+  max-width: 700px;
+  background-color: rgb(32, 32, 32);
+  padding: 30px;
+  margin-top: 10px;
+  box-shadow: -3px 1px 11px 4px rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: -3px 1px 11px 4px rgba(0, 0, 0, 0.08);
+  -moz-box-shadow: -3px 1px 11px 4px rgba(0, 0, 0, 0.08);
+}
+
+.first {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.inputBox {
+  border-radius: 3px;
+  background-color: transparent;
+  outline: 0;
+  border: none;
+  border-bottom: 1px solid rgb(202, 202, 202);
+  padding: 10px;
+  width: 200px;
+  font-size: 18px;
+  color: rgb(168, 168, 168) !important;
+}
+.inputBox:focus {
+  border-bottom: 2px solid rgb(144, 255, 231);
+}
+
+table th,
+table td {
+  color: rgb(241, 239, 239) !important;
+  padding: 10px;
+  padding-right: 36px;
+  padding-left: 36px;
+  font-size: 18px;
+  text-align: left;
+  max-width: 700px;
+  border-bottom: 1px solid rgb(121, 121, 121);
+}
+.button {
+  background-color: rgb(15, 123, 255);
+  border-radius: 3px;
+  width: 150px;
+  padding: 10px;
+  color: white;
+  font-weight: 800;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+}
+.button:hover {
+  background-color: rgb(0, 111, 247);
+}
+
+body {
+  background-image: url("https://image.freepik.com/free-photo/3d-grunge-room-interior-with-spotlight-smoky-atmosphere-background_1048-11333.jpg");
+  background-color: #0f0f0f;
+  background-size: 1600px 800px;
+}
+
+.title {
+  font-family: "Zilla Slab", serif;
+  font-size: 55px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.tableDiv {
+  max-height: 150px;
+  overflow-y: scroll;
+}
+.rating {
+  margin-left: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formDiv {
+  margin: auto;
+}
+ h3 {
+  color: rgb(167, 208, 255) !important;
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+
+/* scrollbar design */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+  background-color: #cccccc;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  background-image: -webkit-linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 25%,
+    transparent 100%,
+    rgba(0, 0, 0, 1) 75%,
+    transparent
+  );
 }
